--- a/eliminateUnstyledAngularContentAndLookProfessional.html
+++ b/eliminateUnstyledAngularContentAndLookProfessional.html
@@ -2,15 +2,19 @@
 <p>How many of your users actually understand how an AngularJS application is bootstrapped and executed when they land on your site?  I would venture to say, close to zero.
 </p>
 <p>Unless you're in the tech industry and have a close relationship with the code base, you'll think one of two scenarios:</p>
+
 <ul>
-    <li>These guys have some broken code and they're sloppy letting bugs through</li>
-    <li>My computer/browser is old</li>
+    <li class="text-primary">These guys have some broken code and they're sloppy letting bugs through</li>
+    <li class="text-primary">My computer/browser is old</li>
 </ul>
-<p>Which one of these is good for your business, product or message?  Neither, it gives a bad user experience which may lead your visitors to look elsewhere before consuming your content.</p>
+
+<p>Which one of these is good for your business, product or message?  None of the above...it gives a bad user experience which will turn your visitors away.</p>
+<br>
 <h4>What do you mean by unstyled content?</h4>
-<p>Here is an example of a website where the angular interpolated bindings were rendered prior to the execution of the AngularJS application.</p>
-<div>
-    <img class="postImage" src="http://techiejs.com/Content/img/PublicImages/0eb14df3-63e1-4e6d-a45a-c97a365b936e_original.png" alt="busted code angular expression state title" width="300" text-align="center" />
+<p>Here is an instance of a freshly loaded website where the angular bindings were rendered as plain ol' text before the Angular application had a chance to load.</p>
+<br>
+<div class="text-center">
+    <img class="postImage" src="http://techiejs.com/Content/img/PublicImages/0eb14df3-63e1-4e6d-a45a-c97a365b936e_original.png" alt="busted code angular expression state title" width="300" style="border:0"  text-align="center" />
 </div>
 <br>
 <pre class="prettyprint">
@@ -30,43 +34,45 @@
 </pre>
 <br>
 
-
-<h4>ng-cloak to the rescue!</h4>
-<br>
-<div>
-    <img class="postImage" src="http://techiejs.com/Content/img/PublicImages/698316a4-f048-4176-8a73-92e008c8ca5e_original.png" alt="the cloak image lol ng-cloak" width="400" text-align="center" />
+<div class="text-center">
+    <img class="postImage" src="http://techiejs.com/Content/img/PublicImages/698316a4-f048-4176-8a73-92e008c8ca5e_original.png" alt="the cloak image lol ng-cloak" width="400" style="border:0"  text-align="center"/>
 </div>
-<p>Not so fast.  If you haven't actually styled your page, you'll get the same wonderful flicker that you always had.  Here is an example of what you might quickly jump to if you read the angular documentation:</p>
+<br>
+<h4>ng-cloak to the rescue!</h4>
+<p>Not so fast.  If you haven't actually styled your page, you'll get the same wonderful flicker that you always had.  The following angular documentation will deceive you like no other:</p>
 <span><a href="https://docs.angularjs.org/api/ng/directive/ngCloak">AngularJS documentation on ng-cloak</a></span>
 <br>
-<pre class="prettyprint">
-    The ngCloak directive is used to prevent the Angular html template from being briefly displayed by the browser in its raw (uncompiled) form while your application is loading. Use this directive to avoid the undesirable flicker effect caused by the html template display.
-</pre>
+<p><small><em>The ngCloak directive is used to prevent the Angular html template from being briefly displayed by the browser in its raw (uncompiled) form while your application is loading. Use this directive to avoid the undesirable flicker effect caused by the html template display.</em></small></p>
+
 
 <br>
 <pre class="prettyprint">
 //Example
-<div class="col-md-3 pull-left" ng-cloak>{{user.post}}</div>
+&lt;div class="col-md-3 pull-left" ng-cloak&gt;;{{user.post}}&lt;/div&gt;
 </pre>
 <br>
-<p>Before we understand why it isn't working, we should have a look at the source code for this directive!  You can CTRL+F this code in your unminified angular.js code, here is a link(<em><small>>Hint: I want you to actually look at the source of the file because you can learn a lot of things, but this actual snippet of code is the second to last line</small</em>):</p>
+<p>Before we understand why this directive usually fails to work as the description suggests we need to have a look at the source code for this directive.  You can CTRL+F to this in your unminified angular.js code.</p>
+<p>  (<small><em>Hint: I want you to actually look at the source of the file because you can learn a lot of things, but this actual snippet of code is the second to last line </em></small> ):</p>
+<br>
 <span><a href="https://code.angularjs.org/1.4.7/angular.js">angular.js ver: 1.4.7</a></span>
 <br>
 <pre class="prettyprint">
 !angular.$$csp() && angular.element(document)
     .find('head')
-    .prepend('<style type="text/css">@charset "UTF-8";[ng\\:cloak],[ng-cloak],' +
+    .prepend('&lt;style type="text/css">@charset "UTF-8";[ng\\:cloak],[ng-cloak],' +
              '[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,' +
              '.ng-hide{display:none !important;}ng\\:form{display:block;}'
              '.ng-animate-block-transitions{transition:0s all!important;-webkit-transition:0s all!important;}' +
-             '</style>');
+             '&rt; style>');
 </pre>
 <br>
 <p>But it should work! AngularJS is broken!  No, what happens here is the angular code is not executed before your page is rendered by the browser.</p>
-<p>The whole point of putting your script files to the bottom of your body tag to minimize a blocking experience has been negated!  <em>sort of...</em></p>
+<p>Remember, putting your script files to the bottom of your body is a pattern that minimizes a blocking experience for users and allow them to view portions of the site before all of the resources are successfully loaded.</p>
+<br>
 <h4>Solutions to an Awesome UX</h4>
 <p>Alright, we pointed out the problems and our first shot at this was a slight failure.</p>
-<h5>Enter ng-bind</h5>
+<br>
+<h3>Enter ng-bind</h3>
 <p>Instead of having your expressions intercepted and rendered by the angular runtime, aka <code>{{stuff}}</code>, you can just bind data to your elements directly:</p>
 <br>
 <pre class="prettyprint">
@@ -74,33 +80,39 @@
 {{stuff}}
 
 //Do this
-<span ng-bind="stuff"></span>
+&ltspan ng-bind="stuff"&gt &lt/span&gt
 </pre>
 <br>
 <p>This solution is quite terrible in my point of view because you just jumbled your angular code and maintenance has taken a huge nose dive.</p>
 <p>Notice how most editors pickup on the double brace syntax and help you easily identify your angular code?  Yeah it's awesome...</p>
 
-<div>
-    <img class="postImage" src="http://techiejs.com/Content/img/PublicImages/e27cec30-d357-4308-a992-29441856aacc_original.png" alt="clean readable code expressions" width="400" text-align="center" />
+<div class="text-center">
+    <img class="postImage" src="http://techiejs.com/Content/img/PublicImages/e27cec30-d357-4308-a992-29441856aacc_original.png" alt="clean readable code expressions" width="600" style="border:0"  text-align="center" />
 </div>
 <br />
-<h5>Enter angular.js at the top</h5>
+<br>
+<h3>Angular.js at the top</h3>
 <p>In this solution you place the script file to the top of your page to load before the rest of the page.  Example:</p>
 <pre class="prettyprint">
 
-    <meta charset="UTF-8">
-    <title>AngularJS</title>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.1/angular.min.js"></script>
+    &ltmeta charset="UTF-8"&gt
+    &lttitle&gtAngularJS&lt/title&gt
+    &ltscript src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.1/angular.min.js">&lt/script&gt
 
-    <div ng-app="yourApp">
-        <span>{{user.name}}</span>
-        <span>{{user.email}}</span>
-    </div>
+    &ltdiv ng-app="yourApp"&gt
+        &ltspan&gt{{user.name}}&lt/span&gt
+        &ltspan&gt{{user.email}}&lt/span&gt
+    &lt/div>
 
 </pre>
-<p>Problem with this?  Well now you blocked the page render until the script is loaded.  Terrible UX.  Sure you may think that the 1MB is lightning fast with today's internet speeds, but there are people out there still on 2G, yes, 2G.</p>
+<p>Problem with this?  Well now you blocked the page render until the script is loaded.  Terrible UX.  Sure you may think that the 1MB is lightning fast with today's internet speeds, but there are people out there still on 2G...yes...2G.</p>
+
+<div class="text-center">
+    <img class="postImage" src="http://techiejs.com/Content/img/PublicImages/fcdac108-666d-43cc-a237-cd39ae1c2b7c_original.png" alt="slow internet lol" width="300" style="border:0"  text-align="center" />
+</div>
+<br>
 <br />
-<h5>My solution - CSS</h5>
+<h3>My solution => CSS</h3>
 <p>The solution that I prefer is to handroll my own 4 lines of CSS and target elements specifically with <strong>ng-cloak</strong> </p>
 <br>
 <pre class="prettyprint">
@@ -109,14 +121,15 @@
 }
 </pre>
 <br>
-<p>No more flicker, time to apply this to the body tag! <strong>Hold your horses...</strong>  </p>
-<p>Think about the user experience, what does this style do to your page if you applied it to the body tag?  It won't display anything, so you might as well have a blocking script in your head achieving the same thing!</p>
+<p>No more flicker.  Time to apply this to the body tag!... <strong>Hold your horses...</strong>  </p>
+<p>Think about the user experience!  What does this style do to your page if you applied it to the body tag?  It won't display anything, so you might as well have a blocking script in your head achieving the same thing!</p>
 <br>
-<div>
-    <img class="postImage" src="http://techiejs.com/Content/img/PublicImages/f85dbe96-7f59-4482-ac87-24da62b36111_original.png" alt="it works it doesnt work lol" width="300" text-align="center" />
+<div class="text-center">
+    <img class="postImage" src="http://techiejs.com/Content/img/PublicImages/f85dbe96-7f59-4482-ac87-24da62b36111_original.png" alt="it works it doesnt work lol" width="300" style="border:0"  text-align="center" />
 </div>
 <br>
 
 
 <h4>Target Your Elements</h4>
-<p>Use ng-cloak very diligently by applying it to individual div, table, and other elements that contain angular <em>{{}}</em> expressions.  </p>
+<p>Use ng-cloak very diligently by applying it to individual div, table, and other elements that contain angular <code>{{}}</code> expressions.  </p>
+<p>Happy coding and keep creating a stellar user experiences that bring visitors back!</p>
