--- a/UseUIRouterToHandleApplicationState.html
+++ b/UseUIRouterToHandleApplicationState.html
@@ -36,7 +36,7 @@
 <br>
 
 <h4>States</h4>
-<p>States are the driving force in UI-Router.  The <code>$stateProvider</code> is similiar to ngRoute, except the state is focused on the <em>location</em> in the application and not the <em>URL</em>.</p>
+<p>States are the driving force in UI-Router.  The <code>$stateProvider</code> is similar to ngRoute, except the state is focused on the <em>location</em> in the application and not the <em>URL</em>.</p>
 <p>States can be centrally defined in your application module <code>.config()</code> or a better solution would be to define the states on individual modules.  For more information on clean Angular code, refer to the <a href="https://github.com/johnpapa/angular-styleguide">Style Guide</a></p>
 <br>
 <br>
@@ -79,7 +79,7 @@ function configuration($stateProvider) {
 <p>The <em>State</em> defines the UI with a controller and view.  A state can have parent/child hierarchy which allows for nesting and multiple views, which leads us to the major features behind UI-Router.</p>
 <ul>
     <li><strong>Nested Views:  </strong>Allows you to define the state hierarchy with <em>dot notation</em> or the parent parameter.  The power here is SRP (Single Responsibility Principle) which allows you to separate various views to their own controllers.  </li>
-    <li><strong>Multiple Named Views:  Allows you to have muliple named views within a single view that point to different states.</strong></li>
+    <li><strong>Multiple Named Views:  Allows you to have multiple named views within a single view that point to different states.</strong></li>
 </ul>
 
 </div>
@@ -165,5 +165,4 @@ For instance, suppose you have a standard view page with a navigation bar, sideb
     <li><a href="http://angular-ui.github.io/ui-router/site/#/api/ui.router">UI Router Documentation</a></li>
     <li><a href="https://github.com/angular/router">Preliminary Angular 2 Router (<em>currently the build is failing)</em></a></li>
 </ul>
-
 
