final markup changes

--- a/UseUIRouterToHandleApplicationState.html
+++ b/UseUIRouterToHandleApplicationState.html
@@ -129,7 +129,7 @@ $stateProvider
 </div>
 <br>
 <div>
-   <p>Note that a parent state must <strong>exist</strong>!!  If you specify a child state with dot notation such as <code> "post.tagList"</code>, <em>tagList</em> will never activate unless a <code>post</code> state is defined.</p>
+   <p>Note that a parent state must <strong>exist!!</strong>  If you specify a child state with dot notation such as <code> "post.tagList"</code>, <em>tagList</em> will never activate unless a <code>post</code> state is defined.</p>
 </div>
 <br>
 <div class="text-center">
@@ -180,7 +180,7 @@ For instance, suppose you have a standard view page with a filters bar, tabledat
 <br>
 <div>
 <p>UI-Router gives us the power to have parallel views that can reference previous states within deeply nested states.</p>
-<p>In another post we'll dive deep into how I use <em>UI-Router</em> in the OSS blog application I am building.</p>
+<p>In another post we'll dive deep into how I use <em>UI-Router</em> in the OSS blog application I am building!</p>
 <br>
 <h4>Other Resources</h4>
 <p>Take a look at the following links for deep documentation behind UI-Router!</p>
